# pydantic-data-quality-tdd-dados

./: 404.html  README.md  dados_transformados.json  index.html  my_duckdb.db  pyproject.toml
app/: etl.py  etl_infer_schema.py  schema.py
docs/: index.md
search/: search_index.json
tests/: test_func_etl.py
