[project]
name = "pydantic-data-quality-tdd-dados"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Henrique",email = "eduardo.hnsantos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-mermaid2-plugin[test] (>=1.2.3,<2.0.0)",
    "mkdocs-material (>=9.7.6,<10.0.0)",
    "mkdocstrings[python] (>=1.0.4,<2.0.0)",
    "taskipy (>=1.14.1,<2.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "isort (>=8.0.1,<9.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pandas (>=3.0.3,<4.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "pandera (>=0.31.1,<0.32.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "pydentic (>=0.0.1.dev3,<0.0.2)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && black ."
test = "pytest -o pythonpath=. tests -v"
run = "python app/main.py"
doc = "mkdocs serve"